<resources>
    <string name="app_name">FantaSport</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="appareil_photo">Appareil photo</string>
    <string name="gallery">Gallery</string>
    <string name="localisation">Localisation</string>
    <string name="statistique">Statistique</string>
    <string name="nous_contacter">Nous contacter</string>
    <string name="a_propos">A propos</string>
    <string name="fantasport">FantaSport</string>
    <string name="email">contact@fantasport.com</string>
    <string name="title_activity_localisation">Map</string>
    <string name="separator">" - "</string>
    <string name="title_activity_maps">Map</string>
    <string name="bienvenue_txt">"Bienvenue sur FantaSport, que le sport commence !\n\nCette application permet de consulter les résultats des matchs."</string>
</resources>
