<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/appareil_photo" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/localisation" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_stats"
            android:title="@string/statistique" />
    </group>

    <item android:title="Contact">
        <menu>
            <item
                android:id="@+id/nav_apropos"
                android:icon="@drawable/ic_menu_apropos"
                android:title="@string/a_propos" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_contact"
                android:title="@string/nous_contacter" />
        </menu>
    </item>

</menu>
